fix color for more contrast

--- a/css/main.css
+++ b/css/main.css
@@ -463,3 +463,8 @@ ul {
 .mobile #project.section {
   text-align: center
 }
+
+#profession .tag {
+  color: #ffffff;
+  background: #008323;
+}
